--- a/assets/css/card_profile_bordered.css
+++ b/assets/css/card_profile_bordered.css
@@ -87,6 +87,10 @@ figure.bordered-profile-card h6:after {
   overflow: hidden;
 }
 
+.bordered-profile-card a {
+  border: none !important;
+}
+
 .bordered-profile-card .icons {
   text-align: center;
   width: 100%;
