--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -118,7 +118,7 @@ a {
   cursor: pointer;
   color: #ff2e88;
   text-decoration: none;
-  border-bottom: 1px solid #ff2e88
+  border-bottom: 1px solid #ff2e88;
 }
 
 a:hover {
