--- a/_layouts/album.html
+++ b/_layouts/album.html
@@ -2,28 +2,29 @@
 layout: default
 active_title: 'Albums'
 ---
-<!-- {{ content }} -->
+	<!-- {{ content }} -->
 	{% assign all_media = '' | split: '/' %}
 	{% for item in page.media %}
 		{% assign this_item = '' | split: '/' %}
 
-		{% comment %}{% assign this_item_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
+		{% comment %}{% assign media_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
 
-		{% capture media_url %}{% include gallery_media_url.html item=item %}{% endcapture %}
-    {% capture thumbnail_url %}{% include gallery_media_thumbnail_url.html item=item %}{% endcapture %}
+		{% capture this_media_url %}{% include gallery_media_url.html item=item %}{% endcapture %}
+		{% capture this_thumbnail_url %}{% include gallery_media_thumbnail_url.html item=item %}{% endcapture %}
 
-		{% assign this_item = this_item | push: media_url %}
-		{% assign this_item = this_item | push: '' %}
-		{% assign this_item = this_item | push: '' %}
-		{% assign this_item = this_item | push: thumbnail_url %}
-		{% assign this_item = this_item | push: item.format %}
+		{% assign this_item = this_item | push: forloop.index %}
+		{% assign this_item = this_item | push: item.url %}
+		{% assign this_item = this_item | push: this_thumbnail_url %}
+		{% assign this_item = this_item | push: this_media_url %}
 		{% assign this_item = this_item | push: item.type %}
+		{% assign this_item = this_item | push: item.format %}
 
 		{% assign all_media = all_media | push: this_item %}
 	{% endfor %}
 	{% assign all_media_container = '' | split: '/' %}
-  {% assign all_media_container = all_media_container | push: all_media %}
-	{% include grid_list.html list=all_media_container cols=3 gallery=true %}
+	{% assign all_media_container = all_media_container | push: all_media %}
+	<!-- {{ all_media | inspect }} -->
+	{% include grid_image_overlay_camera_list.html sectionid="album-meida" list=all_media_container cols=3 %}
 	<br />
 	{% include button_back.html %}
 
