--- a/assets/css/card_profile_bubble.css
+++ b/assets/css/card_profile_bubble.css
@@ -105,12 +105,19 @@
 }
 
 .card-profile-bubble i {
-  color: #ffffff;
   display: inline-block;
   font-size: 18px;
   font-weight: normal;
   opacity: 0.75;
   padding: 10px 2px;
+}
+
+.dark .card-profile-bubble i {
+  color: #ffffff;
+}
+
+.light .card-profile-bubble i {
+  color: var(--light-text-color);
 }
 
 .card-profile-bubble i:hover {
