--- a/_includes/keyboard.html
+++ b/_includes/keyboard.html
@@ -4,6 +4,7 @@
     align-items: center;
     display: flex;
     flex-direction: column;
+    margin: 10px auto;
   }
   .keyboard {
     display: -webkit-box;
