--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -9,6 +9,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 
 <!-- Theme -->
+<!-- <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/hack.css"> -->
 <!-- <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/dark.css"> -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/light.css">
 
@@ -40,6 +41,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_camera.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post_detailed.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post_tinted.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_cycled.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_profile_bordered.css">
