--- a/assets/css/image_overlay_simple_scroll.css
+++ b/assets/css/image_overlay_simple_scroll.css
@@ -64,6 +64,7 @@ figure.overlay-image-simple-scroll h3::after {
 figure.overlay-image-simple-scroll h2 {
   font-weight: 900;
   top: 0;
+  line-height: 24px;
 }
 
 figure.overlay-image-simple-scroll h3 {
