--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -56,8 +56,19 @@
 .dark h2 a,
 .dark h3 a,
 .dark h4 a,
-.dark h5 a {
-  color: #ccc
+.dark h5 a,
+.dark h6 a {
+  color: #ccc;
+  border: none;
+}
+
+.dark h1 a:hover,
+.dark h2 a:hover,
+.dark h3 a:hover,
+.dark h4 a:hover,
+.dark h5 a:hover,
+.dark h6 a:hover {
+  background: none;
 }
 
 .dark code {
