--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -9,12 +9,13 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/centered.css">
 
 <!-- Theme -->
-<!-- <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/hack.css"> -->
 {% if site.ui.theme == 'dark' %}
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/dark.css">
 {% else %}
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/light.css">
 {% endif %}
+<!-- <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/hack.css"> -->
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/hack-min.css">
 
 <!-- Plugin -->
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/music_player.css">
