--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -94,7 +94,7 @@ layout: default
 		{% if page.post_has_front_header == false and page.show_hero == false %}
 		<br />
 		{% endif %}
-		<div class="post_content">
+		<div class="article-content">
 			<!-- BEGIN PAGE CONTENT [POST] -->
 			{% include toc.html html=content %}
 	    		{{ content }}
