--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -72,7 +72,13 @@
 .dark h3 a,
 .dark h4 a,
 .dark h5 a,
-.dark h6 a {
+.dark h6 a,
+.dark header h1 a,
+.dark header h2 a,
+.dark header h3 a,
+.dark header h4 a,
+.dark header h5 a,
+.dark header h6 a {
   color: #ccc;
   border: none;
 }
@@ -82,7 +88,13 @@
 .dark h3 a:hover,
 .dark h4 a:hover,
 .dark h5 a:hover,
-.dark h6 a:hover {
+.dark h6 a:hover,
+.dark header h1 a:hover,
+.dark header h2 a:hover,
+.dark header h3 a:hover,
+.dark header h4 a:hover,
+.dark header h5 a:hover,
+.dark header h6 a:hover {
   background: none;
 }
 
