--- a/_includes/chat_list.html
+++ b/_includes/chat_list.html
@@ -9,7 +9,8 @@
       <!-- [0]: type: 'text'/'image' -->
       <!-- [1]: content: text/image -->
       <!-- [2]: time: 19:22 -->
-      <div class="message">{% if item.first == 'text' %}{{ item[1] }}{% elsif item.first == 'image' %}<img src="{{ item[1] }}"/>{% else %}...{% endif %}<div class="timestamp">{{ item.last }}</div></div>
+      <!-- [3]: send: if send: 'send', if not send: nil -->
+      <div class="message {% if item[3].size > 0 %}personal{% endif %}">{% if item.first == 'text' %}{{ item[1] }}{% elsif item.first == 'image' %}<img src="{{ item[1] }}"/>{% else %}...{% endif %}<div class="timestamp">{{ item.last }}</div></div>
       {% endfor %}
     </div>
   </div>
