--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -25,7 +25,7 @@
 	<nav class="site-navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
 		<meta itemprop="name" content="Main Menu">
 		{% for item in site.data.navbar.left %}
-		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} href="{{ site.url }}{{ item.url }}">{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-left">{{ item.svg }}</span>{% endif %}{% if item.title == 'Home' %}{{ site.name }}{% else %}{{ item.title }}{% endif %}</a>
+		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}>{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-left">{{ item.svg }}</span>{% endif %}{% if item.title == 'Home' %}{{ site.name }}{% else %}{{ item.title }}{% endif %}</a>
 		{% endfor %}
 	</nav>
 
