--- a/_includes/layout_nav.html
+++ b/_includes/layout_nav.html
@@ -32,7 +32,7 @@
 	<nav class="site-navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
 		<meta itemprop="name" content="Utility Menu">
 		{% for item in site.data.navbar.right %}
-		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} href="{{ site.url }}{{ item.url }}">{{ item.title }}{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-right">{{ item.svg }}</span>{% endif %}</a>
+		<a itemprop="url"{% if page.title == item.title or page.active_title == item.title %} class="active"{% endif %} {% if item.onclick.size > 0 %}onclick="{{ item.onclick }}"{% else %}href="{{ site.url }}{{ item.url }}"{% endif %}>{{ item.title }}{% if item.svg.size > 0 %}<span class="site-navigation-svg-span-right">{{ item.svg }}</span>{% endif %}</a>
 		{% endfor %}
 	</nav>
 
