--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -69,6 +69,7 @@ layout: null
       } else {
         $('body').removeClass('dark').addClass('light');
       }
+      console.log(themeSet);
     }
   </script>
 </body>
