--- a/assets/css/image_overlay_camera.css
+++ b/assets/css/image_overlay_camera.css
@@ -63,6 +63,7 @@ figure.overlay-image-camera p {
   width: auto;
   text-transform: uppercase;
   font-weight: 400;
+  color: #fff;
 }
 
 figure.overlay-image-camera h3 span,
