--- a/assets/css/image_overlay_lines.css
+++ b/assets/css/image_overlay_lines.css
@@ -93,6 +93,7 @@ figure.overlay-image-lines h4 {
 figure.overlay-image-lines h2 {
   font-weight: 400;
   font-size: 1.5em;
+  color: #fff;
 }
 
 figure.overlay-image-lines h4 {
