--- a/assets/css/card_post_tinted.css
+++ b/assets/css/card_post_tinted.css
@@ -62,6 +62,7 @@ figure.card-post-tinted h2,
 figure.card-post-tinted p {
   margin: 0;
   padding: 0;
+  color: #fff;
 }
 
 figure.card-post-tinted h2 {
