--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -303,6 +303,7 @@
 
 .light .theme-toggler {
   fill: var(--light-text-color);
+  stroke: var(--light-text-color);
   max-width: 14px;
   max-height: 14px;
 }
