--- a/assets/css/dark.css
+++ b/assets/css/dark.css
@@ -319,6 +319,7 @@
 
 .light .theme-toggler {
   fill: var(--dark-text-color);
+  stroke: var(--dark-text-color);
   max-width: 14px;
   max-height: 14px;
 }
