--- a/assets/css/light.css
+++ b/assets/css/light.css
@@ -86,6 +86,7 @@
   color: var(--light-text-color);
   background: #F7F7F7;
   border: 1px solid #959595;
+  word-break: break-word;
 }
 
 .light code {
