--- a/assets/css/hack-min.css
+++ b/assets/css/hack-min.css
@@ -97,6 +97,7 @@
   padding: 0;
   margin: 0;
   border-radius: 0;
+  word-break: break-all;
 }
 
 .hack code {
@@ -106,7 +107,7 @@
   padding: 1px 4px;
   margin: 0 2px;
   border-radius: 3px;
-  word-break: break-all;
+  word-break: break-word;
 }
 
 .hack a[rel*="external"]::after {
