--- a/assets/css/hack-min.css
+++ b/assets/css/hack-min.css
@@ -100,14 +100,18 @@
   word-break: break-word;
 }
 
-.hack pre code,
-.hack pre code span {
+.hack pre code {
   font-weight: normal;
   border: none;
   background: none;
   padding: 0;
   margin: 0;
   border-radius: 0;
+}
+
+.hack pre,
+.hack pre code,
+.hack pre code span {
   word-break: break-all;
 }
 
