--- a/assets/css/label_tag.css
+++ b/assets/css/label_tag.css
@@ -1,14 +1,14 @@
 @import url('https://fonts.googleapis.com/css?family=Lato:400,900');
 
-a.tag-link {
+a.label-tag-link {
   border: none;
 }
 
-a.tag-link:hover {
+a.label-tag-link:hover {
   background: none;
 }
 
-i.tag-label {
+i.label-tag-label {
   margin: 0 5px;
   height: 25px;
   min-width: 5em;
@@ -21,14 +21,14 @@ i.tag-label {
   font-style: normal;
 }
 
-i.tag-label,
-i.tag-label * {
+i.label-tag-label,
+i.label-tag-label * {
   font-family: 'Lato', sans-serif;
   box-sizing: border-box;
 }
 
-.tag-label .tag-symbol,
-.tag-label .tag-name {
+.label-tag-label .label-tag-symbol,
+.label-tag-label .label-tag-name {
   height: 100%;
   padding: 5px 5px;
   display: inline-block;
@@ -36,7 +36,7 @@ i.tag-label * {
   text-align: center;
 }
 
-.tag-label .tag-symbol {
+.label-tag-label .label-tag-symbol {
   width: 30px;
   font-size: 15px;
   background: #F15F22;
@@ -44,7 +44,7 @@ i.tag-label * {
   border-bottom-left-radius: .5em;
 }
 
-.tag-label .tag-name {
+.label-tag-label .label-tag-name {
   height: 100%;
   padding: 5px 5px;
   color: #F15F22;
