--- a/assets/css/label_profile.css
+++ b/assets/css/label_profile.css
@@ -24,7 +24,7 @@
   background: #f7f7f7;
   height: 30px;
   border-radius: 5px;
-  margin: 10em 10em;
+  margin: 0 5px;
   display: inline-block;
   align-items: center;
   align-content: center;
