--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@ layout: default
 			<svg aria-hidden="true" style="margin-bottom:-3px" class="i-clock" viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="var(--accent-color)" stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%"><circle cx="16" cy="16" r="14" /><path d="M16 8 L16 16 20 20" /></svg>
 			<a href="index.html">{% include reading_time.html html=content %} read</a>
 			<svg aria-hidden="true" style="margin-bottom: -3px" class="i-edit" viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="var(--accent-color)" stroke-linecap="round" stroke-linejoin="round" stroke-width="6.25%"><path d="M30 7 L25 2 5 22 3 29 10 27 Z M21 6 L26 11 Z M5 22 L10 27 Z" /></svg>
-			<!-- <time datetime="2009-07-22T00:00:00&#43;00:00"> --><a href="{{ site.url }}/posts/archive/index.html">{% if page.show_time %}{{ page.date | date: "%b %d, %Y %X" }}{% else %}{{ page.date | date: "%b %d, %Y" }}{% endif %}</a><!-- </time> -->&nbsp;Published
+			<!-- <time datetime="2009-07-22T00:00:00&#43;00:00"> --><a href="{{ site.url }}/posts/archive/index.html">{% if page.show_time %}{{ page.date | date: "%b %d, %Y %X" }}{% else %}{{ page.date | date: "%b %d, %Y" }}{% endif %}</a><!-- </time> -->
 			<output class="js-copied" hidden>Copied to Clipboard</output>
 			<script>
 				((window, document, undefined) => {
@@ -67,7 +67,9 @@ layout: default
 		{% endif %}
 
 		{% if page.show_hero and page.hero.url.size > 0 %}
+		{% capture page_hero %}{% include post_hero_url.html image=page.hero.url res='high' %}{% endcapture %}
 		<!-- BEGIN PAGE HERO -->
+		{% if page.old_hero_style %}
 		<figure class="ratio-container" aria-hidden="true" itemscope itemtype="https://schema.org/ImageObject">
 			<link itemprop="contentUrl" href="{{ site.url | append: site.path.hero.high | append: '/' | append: page.hero.url }}">
 			<meta itemprop="encodingFormat" content="image/{{ page.hero.format }}">
@@ -75,7 +77,6 @@ layout: default
 			<meta itemprop="keywords" content="{{ page.hero.url }}">
 			<meta itemprop="contentLocation" content="Shenzhen, China">
 			<meta itemprop="description" content="{{ page.title }}">
-			{% capture page_hero %}{% include post_hero_url.html image=page.hero.url res='high' %}{% endcapture %}
 			<!-- page.hero.url: {{ page.hero.url }} -->
 			<!-- <img itemprop="thumbnailUrl" alt="{{ page.title }}" class="lazyload blur-up" src="{{ page_hero }}" srcset="{{ page_hero }}" data-srcset="{{ page_hero }}" data-sizes="auto"> -->
 			<img itemprop="thumbnailUrl" alt="HERO | {{ page.title }}" src="{{ page_hero }}">
@@ -83,6 +84,10 @@ layout: default
 			<figcaption itemprop="caption"><span>{{ page.hero.name }}</span>. Photo by <span>{{ page.hero.author }}</span> on {{ page.hero.site }}.</figcaption>
 			{% endif %}
 		</figure>
+		{% else %}
+		{% assign page_tags = page.tags | join: "," %}
+		{% include image_overlay_listing.html title=page.title image=page_hero items=page_tags %}
+		{% endif %}
 		<!-- END PAGE HERO -->
 		{% endif %}
 
