--- a/_includes/card_profile_bubble.html
+++ b/_includes/card_profile_bubble.html
@@ -1,4 +1,4 @@
-<figure class="card-profile-bubble" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+<figure class="card-profile-bubble" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <div class="profile-image"><img src="{{ include.image }}" />
     <div class="icons">
       {% include linked_icons.html url=include.url github=include.github email=include.email phone=include.phone %}
