--- a/_includes/card_profile_bordered.html
+++ b/_includes/card_profile_bordered.html
@@ -1,4 +1,4 @@
-<figure class="bordered-profile-card" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+<figure class="bordered-profile-card" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <div class="profile-image"><img src="{{ include.image }}" /></div>
   <figcaption>
     <h3>{{ include.title }}</h3>
