--- a/_includes/card_profile_quotes.html
+++ b/_includes/card_profile_quotes.html
@@ -1,4 +1,4 @@
-<figure class="quotes-profile-card" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+<figure class="quotes-profile-card" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <div class="author">
     <img src="{{ include.image }}"/>
     <h5>{{ include.title }}</h5><span>{{ include.subtitle }}</span>
