--- a/_includes/image_overlay_camera.html
+++ b/_includes/image_overlay_camera.html
@@ -1,7 +1,7 @@
 {% assign this_media_type = include.media_type | default: 'image' %}
 {% assign this_media_format = include.media_format | default: 'jpeg' %}
 {% capture this_media_mix %} type="{{ this_media_type }}/{{ this_media_format }}"{% if this_media_type == 'video' %} data-poster="{{ include.image }}" data-sources='[{ "href": "{{ include.href }}", "type": "{{ this_media_type }}/{{ this_media_format }}"}]'{% endif %}{% endcapture %}
-<figure class="overlay-image-camera" {{ this_media_mix }} style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+<figure class="overlay-image-camera" {{ this_media_mix }} style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <img src="{{ include.image }}" />
   <figcaption>
     <div class="heading">
