--- a/_includes/image_overlay_listing.html
+++ b/_includes/image_overlay_listing.html
@@ -1,4 +1,4 @@
-<figure class="overlay-image-listing" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}">
+<figure class="overlay-image-listing" style="{% if include.maxwidth.size > 0 %}max-width: {{ include.maxwidth }} !important;{% endif %}{% if include.maxheight.size > 0 %}max-height: {{ include.maxheight }} !important;{% endif %}">
   <img src="{{ include.image }}" />
   <figcaption>
     <h3>{% if include.href.size > 0 %}<a href="{{ include.href }}">{{ include.title }}</a>{% else %}{{ include.title }}{% endif %}</h3>
