--- a/_layouts/album.html
+++ b/_layouts/album.html
@@ -4,7 +4,7 @@ active_title: 'Albums'
 ---
 	<!-- {{ content }} -->
 	{% assign all_media = '' | split: '/' %}
-	{% for item in page.media %}
+	{% for item in page.media reversed %}
 		{% assign this_item = '' | split: '/' %}
 
 		{% comment %}{% assign media_url = site.url | append: '/gallery/detail/?album=' | append: page.unique | append: '&idx=' | append: forloop.index | append: "&type=" | append: item.type %}{% endcomment %}
