--- a/_includes/layout_link_css_pre.html
+++ b/_includes/layout_link_css_pre.html
@@ -43,6 +43,7 @@
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_fade_detailed.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_camera.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_white_cross.css">
+<link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/image_overlay_scale_detail.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post_detailed.css">
 <link rel="stylesheet" href="{{ site.url }}{{ site.path.css }}/card_post_tinted.css">
