--- a/assets/css/image_overlay_scale_detail.css
+++ b/assets/css/image_overlay_scale_detail.css
@@ -26,6 +26,7 @@ figure.overlay-image-scale-detail img {
   max-width: 100%;
   position: relative;
   opacity: 0.9;
+  display: block;
 }
 
 figure.overlay-image-scale-detail figcaption {
