--- a/assets/css/chat_list.css
+++ b/assets/css/chat_list.css
@@ -14,6 +14,7 @@
   position: relative;
   display: block;
   margin: 20px auto;
+  padding-bottom: 40px;
 }
 
 .chat-title {
@@ -104,6 +105,9 @@
   background-color: rgba(0, 0, 0, 0.3);
   width: 100%;
   height: 40px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 .action-box-input,
